--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- Request permissions -->
+    <!-- Required permissions -->
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" tools:ignore="ScopedStorage" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
@@ -10,21 +10,29 @@
         android:allowBackup="true"
         android:label="@string/app_name"
         android:theme="@style/Theme.MyApp">
-        
-        <!-- Launcher Activity -->
+
+        <!-- HomeActivity is now the launcher -->
         <activity
-            android:name=".CalendarActivity"
+            android:name=".HomeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
-        <!-- Day Activity -->
+
+        <!-- Existing CalendarActivity and DayActivity -->
+        <activity
+            android:name=".CalendarActivity"
+            android:exported="false" />
         <activity
             android:name=".DayActivity"
             android:exported="false" />
-        
+
+        <!-- New ThingsActivity -->
+        <activity
+            android:name=".ThingsActivity"
+            android:exported="false" />
+
     </application>
 </manifest>
